--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-md-9 col-sm-12 col-xs-12">
 				<div class="row">
-					<div class="col-md-8 col-sm-12 col-xs-12 pull-right">
+					<div class="col-12">
         				{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
         				<div class="articleGrid row">
 		{% endif %}        		
