--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -228,7 +228,7 @@
 							{% include 'elements/selectedComment.html.twig' with {'class' : 'marginTop30 marginBottom30'} %}
 
 							{% endcontainer %}
-
 						</div>
+					</div>
 </main>
 {% endblock %}
