--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -134,7 +134,7 @@
 		{% endgimmelist %}
 
 		<div class="row">
-						<div class="col-md-6 col-sm-12 col-xs-12">
+						<div class="col-12">
 												<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Sports</a></h3>
 											<div class="row">
 															<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
@@ -149,8 +149,10 @@
 															</div>
 											</div>
 						</div>
+		</div>
+ <div class="row">
 
-							<div class="col-md-6 col-sm-12 col-xs-12">
+							<div class="col-12">
 											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('travel') }}">Travel</a></h3>
 												<div class="row">
 																<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
@@ -165,8 +167,7 @@
 																</div>
 												</div>
 							</div>
-		</div>
-
+ </div>
 			</div>
 
 			<div class="col-xs-12 col-sm-12 col-md-3">
