--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -14,7 +14,7 @@
 
 	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
-
+	   {{ item }}
     {% if loop.first %}
 
 		{% if brNews %}
