--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -14,7 +14,6 @@
 
 	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
-	 {% item %}
     {% if loop.first %}
 
 		{% if brNews %}
@@ -59,6 +58,9 @@
 
 				{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/politics'}  %}
 					{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
+				{% endgimmelist %}
+       	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
+				{{ item.content }}
 				{% endgimmelist %}
 
 
