--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -61,6 +61,7 @@
 					{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
 				{% endgimmelist %}
        	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
+				 {{ dump(item) }}
 				{% endgimmelist %}
 
 			</div>
