--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -62,20 +62,14 @@
 				</div>
 					<div class="row">
 			<div class="col-xs-12">
-				<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Politics</a></h3>
+				<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Kochen %amp; Backen</a></h3>
 			</div>
 
 			<div class="articleGrid">
 
-				{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/politics'}  %}
+				{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/kochen-backen'}  %}
 					{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
 				{% endgimmelist %}
-       	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
-				 	{% if (item.values.position == 8) or (item.values.position == 9) %}
-							{{ dump(item) }}
-					{% endif %}
-				{% endgimmelist %}
-
 			</div>
 
 		</div>
