change home grid10

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -65,7 +65,7 @@
 				<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Kochen &amp; Backen</a></h3>
 			</div>
 
-			<div class="articleGrid">
+			<div class="articleGrid d-flex">
 
 				{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/kochen-backen'}  %}
 					{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
